JG-52 Finished get all lobbies route
