# src/main/kotlin/ru/rsreu/jackal/api/game/dto/GameModeInfo.kt
@@ -1,5 +1,6 @@
 package ru.rsreu.jackal.api.game.dto
 
 data class GameModeInfo(
-    val title: String, val maxPlayerNumber: Int
+    val title: String,
+    val maxPlayerNumber: Int
 )
