# src/main/kotlin/ru/rsreu/jackal/api/lobby/dto/ClientLobbyInfo.kt
@@ -1,13 +1,10 @@
 package ru.rsreu.jackal.api.lobby.dto
 
-import ru.rsreu.jackal.api.game.dto.GameModeInfo
+import ru.rsreu.jackal.api.game.GameMode
 import ru.rsreu.jackal.shared_models.LobbyMemberStatus
 
 data class ClientLobbyInfo(
-    val title: String,
-    val isPublic: Boolean,
-    val members: Collection<ClientLobbyMemberInfo>,
-    val gameMode: GameModeInfo?
+    val title: String, val isPublic: Boolean, val members: Collection<ClientLobbyMemberInfo>, val gameMode: GameMode?
 )
 
 data class ClientLobbyMemberInfo(
