# src/main/resources/static/openapi.yaml
@@ -136,6 +136,20 @@ paths:
               schema:
                 $ref: "#/components/schemas/GetLobbyConnectionInfoResponse"
 
+  /api/lobby/all:
+    get:
+      tags:
+      - lobby-controller
+      summary: get info about all lobbies
+
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/GetAllLobbiesClientResponse"
+
   /api/user/info?userId={userId}:
     get:
       tags:
@@ -294,6 +308,63 @@ components:
           enum:
             - OK
             - USER_NOT_IN_ANY_LOBBY
+
+
+    GetAllLobbiesClientResponse:
+        type: object
+        properties:
+          lobbies:
+            type: array
+            items:
+              type: object
+              properties:
+                title:
+                  type: string
+                isPublic:
+                  type: boolean
+                members:
+                  type: array
+                  items:
+                    type: object
+                    properties:
+                      name:
+                        type: string
+                      pictureUrl:
+                        type: string
+                      isHost:
+                        type: boolean
+                      status:
+                        type: string
+                        enum:
+                          - NOT_CONNECTED
+                          - READY
+                          - NOT_READY
+                          - IN_GAME
+
+                gameMode:
+                  type: object
+                  properties:
+                    id:
+                      type: number
+                    title:
+                      type: string
+                    maxPlayerNumber:
+                      type: number
+                    game:
+                      type: object
+                      properties:
+                        id:
+                          type: number
+                        title:
+                          type: string
+                        serviceAddress:
+                          type: string
+                        clientAddress:
+                          type: string
+          responseStatus:
+            type: string
+            enum:
+              - OK
 
     GetUserInfoResponse:
       type: object
